fix(pdsls): add missing colour vars

--- a/styles/pdsls/catppuccin.user.less
+++ b/styles/pdsls/catppuccin.user.less
@@ -34,10 +34,13 @@
     --color-red-400: @red;
     --color-green-300: @green;
     --color-green-400: @green;
+    --color-emerald-400: @green;
     --color-blue-400: @accent;
     --color-blue-500: @accent;
+    --color-indigo-400: @accent;
+    --color-indigo-300: fade(@accent, 85%);
 
-    --color-white: @base;
+    --color-white: @text;
 
     --color-dark-100: @surface1;
     --color-dark-200: @surface0;
@@ -66,7 +69,7 @@
     --color-neutral-50: @base;
     --color-neutral-400: @subtext0;
     --color-neutral-500: @subtext0;
-    --color-neutral-800: @base;
+    --color-neutral-800: mix(@surface0, @base, 30%);
 
     background-color: @base;
 
